[gd_scene load_steps=3 format=3 uid="uid://d272fsoi8hvh7"]

[ext_resource type="Script" path="res://update.gd" id="1_goy3n"]
[ext_resource type="FontFile" uid="uid://2il24uielf43" path="res://resources/Montreal-Regular.ttf" id="2_n00x1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goy3n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -39.0
offset_right = 396.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_n00x1")
theme_override_font_sizes/font_size = 60
text = "Controllo aggiornamenti..."

[node name="HTTP_LatestVer" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 516.0
offset_top = 431.0
offset_right = -516.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_n00x1")
theme_override_font_sizes/font_size = 40
text = "Continua al Menu"

[node name="ErrCode" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Button" to="." method="_on_continue_pressed"]
